# prebuilt-down

./: .gitignore  AGENTS.md  Cargo.toml  README.md
src/: app.rs  cli.rs  main.rs  platform.rs
src/config/: loader.rs  mod.rs  types.rs
src/core/: archive.rs  cache.rs  download.rs  extract.rs  http.rs  lock_file.rs  mod.rs  verify.rs
src/traits/: mod.rs  path_ext.rs  resolve_filename.rs  response_ext.rs  to_hex.rs
src/types/: archive.rs  hash.rs  mod.rs  platform.rs
