[package]
name = "prebuilt-down"
version = "0.1.2"
edition = "2024"
repository = "https://github.com/BHznJNs/prebuilt-down"
description = "A CLI tool for resolve prebuilt binary dependencies"
readme = "README.md"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
toml = "0.8"
xz2 = "0.1"
zip = "2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
